@@ -15,6 +15,13 @@ section_menu_id: guides
 # Reconfigure Neo4j
 
 This guide shows how to reconfigure a Neo4j database using `Neo4jOpsRequest`.
+We will:
+
+1. Deploy Neo4j with default configuration.
+2. Check current values from Neo4j using `cypher-shell`.
+3. Create a custom config secret.
+4. Apply a `Reconfigure` OpsRequest.
+5. Verify changed values and show `applyConfig` precedence over `configSecret`.
 
 ## Before You Begin
 
@@ -23,10 +30,13 @@ This guide shows how to reconfigure a Neo4j database using `Neo4jOpsRequest`.
 - Review [Neo4j](/docs/guides/neo4j/concepts/neo4j.md), [OpsRequest](/docs/guides/neo4j/concepts/opsrequest.md), and [Reconfigure Overview](/docs/guides/neo4j/reconfigure/overview.md).
 
 ```bash
-kubectl create ns demo
+$ kubectl create ns demo
+namespace/demo created
 ```
 
 ## Prepare Database
+
+First, deploy Neo4j with default configuration (no custom config secret):
 
 ```yaml
 apiVersion: kubedb.com/v1alpha2
@@ -37,8 +47,6 @@ metadata:
 spec:
   version: "2025.12.1"
   replicas: 3
-  configuration:
-    secretName: neo4j-config
   storageType: Durable
   storage:
     storageClassName: standard
@@ -50,9 +58,105 @@ spec:
   deletionPolicy: WipeOut
 ```
 
+```bash
+$ cat <<'EOF' | kubectl apply -f -
+apiVersion: kubedb.com/v1alpha2
+kind: Neo4j
+metadata:
+  name: neo4j-test
+  namespace: demo
+spec:
+  version: "2025.12.1"
+  replicas: 3
+  storageType: Durable
+  storage:
+    storageClassName: standard
+    accessModes:
+      - ReadWriteOnce
+    resources:
+      requests:
+        storage: 2Gi
+  deletionPolicy: WipeOut
+EOF
+neo4j.kubedb.com/neo4j-test created
+
+$ kubectl wait --for=condition=Ready neo4j/neo4j-test -n demo --timeout=600s
+neo4j.kubedb.com/neo4j-test condition met
+```
+
+## Check Current Settings (Before Reconfigure)
+
+Before applying the reconfigure request, connect with `cypher-shell` and check current values:
+
+```bash
+$ PASS=$(kubectl get secret -n demo neo4j-test-auth -o jsonpath='{.data.password}' | base64 -d)
+$ kubectl exec -it -n demo neo4j-test-0 -- cypher-shell -u neo4j -p "$PASS"
+```
+
+These are the current values before running the reconfigure OpsRequest.
+
+Check `db.query` settings:
+
+```bash
+neo4j@neo4j> SHOW SETTINGS
+             YIELD name, value
+             WHERE name STARTS WITH 'db.query'
+             RETURN name, value
+             ORDER BY name
+             LIMIT 10;
++-------------------------------------------+
+| name                        | value       |
++-------------------------------------------+
+| "db.query.default_language" | "CYPHER_25" |
++-------------------------------------------+
+
+1 row
+ready to start consuming query after 12 ms, results consumed after another 1 ms
+```
+
+Check `db.checkpoint` settings:
+
+```bash
+neo4j@neo4j> SHOW SETTINGS
+             YIELD name, value
+             WHERE name STARTS WITH 'db'
+             RETURN name, value
+             ORDER BY name
+             LIMIT 3;
++--------------------------------------------+
+| name                          | value      |
++--------------------------------------------+
+| "db.checkpoint"               | "PERIODIC" |
+| "db.checkpoint.interval.time" | "15m"      |
+| "db.checkpoint.interval.tx"   | "100000"   |
++--------------------------------------------+
+
+3 rows
+ready to start consuming query after 11 ms, results consumed after another 1 ms
+```
+
+Check `server.jvm` settings:
+
+```bash
+neo4j@neo4j> SHOW SETTINGS
+             YIELD name, value
+             WHERE name STARTS WITH 'server.jvm'
+             RETURN name, value
+             ORDER BY name
+             LIMIT 3;
++---------------------------------+
+| name                    | value |
++---------------------------------+
+| "server.jvm.additional" | NULL  |
++---------------------------------+
+
+1 row
+ready to start consuming query after 13 ms, results consumed after another 2 ms
+```
+
 ## Create Custom Configuration Secret
 
-Use a Secret like this for `spec.configuration.configSecret.name`:
+Create `custom-config` with your provided values:
 
 ```yaml
 apiVersion: v1
@@ -61,31 +165,33 @@ metadata:
   name: custom-config
   namespace: demo
 stringData:
-  dbms.logs.query.enabled: "INFO"
-  dbms.logs.query.parameter_logging: "true"
+  db.query.default_language: "CYPHER_5"
+  db.checkpoint.interval.time: "20m"
   server.jvm.additional: |-
     -XX:+UseG1GC
     -XX:-OmitStackTraceInFastThrow
-    -XX:+AlwaysPreTouch
-    -XX:+UnlockExperimentalVMOptions
-    -XX:+TrustFinalNonStaticFields
-    -XX:+DisableExplicitGC
-    -Djdk.nio.maxCachedBufferSize=1024
-    -Dio.netty.tryReflectionSetAccessible=true
-    -Djdk.tls.ephemeralDHKeySize=2048
-    -Djdk.tls.rejectClientInitiatedRenegotiation=true
-    -XX:FlightRecorderOptions=stackdepth=256
-    -XX:+UnlockDiagnosticVMOptions
-    -XX:+DebugNonSafepoints
-    --add-opens=java.base/java.nio=ALL-UNNAMED
-    --add-opens=java.base/java.io=ALL-UNNAMED
-    --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-    -Dlog4j2.disable.jmx=true
+```
+
+```bash
+$ cat <<'EOF' | kubectl apply -f -
+apiVersion: v1
+kind: Secret
+metadata:
+  name: custom-config
+  namespace: demo
+stringData:
+  db.query.default_language: "CYPHER_5"
+  db.checkpoint.interval.time: "20m"
+  server.jvm.additional: |-
+    -XX:+UseG1GC
+    -XX:-OmitStackTraceInFastThrow
+EOF
+secret/custom-config created
 ```
 
 ## Reconfigure Request
 
-Apply a `Neo4jOpsRequest` with `configSecret` and inline `applyConfig`:
+Now apply this `Neo4jOpsRequest` exactly:
 
 ```yaml
 apiVersion: ops.kubedb.com/v1alpha1
@@ -101,10 +207,16 @@ spec:
     configSecret:
       name: custom-config
     applyConfig:
-      server.metrics.enabled: "false"
+      db.checkpoint.interval.time: "25m"
   timeout: 5m
   apply: IfReady
 ```
+
+Here,
+
+- `configSecret` provides base custom settings.
+- `applyConfig` applies inline overrides.
+- If the same key exists in both places, `applyConfig` takes precedence.
 
 ```bash
 $ cat <<'EOF' | kubectl apply -f -
@@ -121,7 +233,7 @@ spec:
     configSecret:
       name: custom-config
     applyConfig:
-      server.metrics.enabled: "false"
+      db.checkpoint.interval.time: "25m"
   timeout: 5m
   apply: IfReady
 EOF
@@ -133,7 +245,7 @@ neo4jopsrequest.ops.kubedb.com/reconfigure condition met
 
 ## Verify Reconfiguration
 
-This request was applied successfully:
+Check OpsRequest status:
 
 ```bash
 $ kubectl get neo4jopsrequest -n demo reconfigure
@@ -141,22 +253,95 @@ NAME          TYPE          STATUS       AGE
 reconfigure   Reconfigure   Successful   2m5s
 ```
 
-Check that the updated configuration is visible from Neo4j using `cypher-shell`:
+Now run the same three queries again and confirm updated values:
 
 ```bash
 $ PASS=$(kubectl get secret -n demo neo4j-test-auth -o jsonpath='{.data.password}' | base64 -d)
-$ kubectl exec -n demo neo4j-test-0 -- cypher-shell -u neo4j -p "$PASS" "SHOW SETTINGS YIELD name, value WHERE name STARTS WITH 'server.metrics' RETURN name, value ORDER BY name LIMIT 3;"
-name, value
-"server.metrics.enabled", "false"
-"server.metrics.csv.enabled", "false"
-"server.metrics.csv.interval", "5000"
+$ kubectl exec -it -n demo neo4j-test-0 -- cypher-shell -u neo4j -p "$PASS"
 ```
+
+Check `db.query` settings:
+
+```bash
+neo4j@neo4j> SHOW SETTINGS
+             YIELD name, value
+             WHERE name STARTS WITH 'db.query'
+             RETURN name, value
+             ORDER BY name
+             LIMIT 10;
++-------------------------------------------+
+| name                        | value       |
++-------------------------------------------+
+| "db.query.default_language" | "CYPHER_5" |
++-------------------------------------------+
+
+1 row
+ready to start consuming query after 12 ms, results consumed after another 1 ms
+```
+
+Check `db.checkpoint` settings (updated):
+
+```bash
+neo4j@neo4j> SHOW SETTINGS
+             YIELD name, value
+             WHERE name STARTS WITH 'db'
+             RETURN name, value
+             ORDER BY name
+             LIMIT 3;
++--------------------------------------------+
+| name                          | value      |
++--------------------------------------------+
+| "db.checkpoint"               | "PERIODIC" |
+| "db.checkpoint.interval.time" | "25m"      |
+| "db.checkpoint.interval.tx"   | "100000"   |
++--------------------------------------------+
+
+3 rows
+ready to start consuming query after 11 ms, results consumed after another 1 ms
+```
+
+Check `server.jvm` settings (updated):
+
+```bash
+neo4j@neo4j> SHOW SETTINGS
+                          YIELD name, value
+                          WHERE name STARTS WITH 'server.jvm'
+                          RETURN name, value
+                          ORDER BY name
+                          LIMIT 3;
++-----------------------------------------------------------+
+| name                    | value                           |
++-----------------------------------------------------------+
+| "server.jvm.additional" | "-XX:+UseG1GC                   |
+|                         \ -XX:-OmitStackTraceInFastThrow" |
++-----------------------------------------------------------+
+
+1 row
+ready to start consuming query after 80 ms, results consumed after another 7 ms
+```
+
+From the output:
+
+- `db.query.default_language` comes from `custom-config` secret.
+- `db.checkpoint.interval.time` is `25m` from `applyConfig`, not `20m` from secret.
+- `server.jvm.additional` is now set from `custom-config` (it was `NULL` before reconfigure).
+- This confirms `applyConfig` has higher precedence than `configSecret` for overlapping keys.
 
 ## Cleaning up
 
 ```bash
-kubectl delete neo4jopsrequest -n demo reconfigure
-kubectl patch -n demo neo4j/neo4j-test -p '{"spec":{"deletionPolicy":"WipeOut"}}' --type="merge"
-kubectl delete -n demo neo4j/neo4j-test
-kubectl delete ns demo
+$ kubectl delete neo4jopsrequest -n demo reconfigure
+neo4jopsrequest.ops.kubedb.com "reconfigure" deleted
+
+$ kubectl delete secret -n demo custom-config
+secret "custom-config" deleted
+
+$ kubectl patch -n demo neo4j/neo4j-test -p '{"spec":{"deletionPolicy":"WipeOut"}}' --type="merge"
+neo4j.kubedb.com/neo4j-test patched
+
+$ kubectl delete -n demo neo4j/neo4j-test
+neo4j.kubedb.com "neo4j-test" deleted
+
+$ kubectl delete ns demo
+namespace "demo" deleted
 ```
